[package]
name = "cmongo2csv"
description = "Utility to convert a MongoDB JSON dump to a CSV file."
version = "1.0.0"
authors = ["Sam Saint-Pettersen <s.stpettersen+github@gmail.com>"]
homepage = "https://github.com/stpettersens/db-tools"
license = "MIT"

[dependencies]
clioptions = "0.1.0"
regex = "0.1.77"
rustc-serialize = "*"
