[package]
name = "csql2mongo"
description = "Utility to convert a SQL dump to a MongoDB JSON dump."
version = "1.0.0"
authors = ["Sam Saint-Pettersen <s.stpettersen+github@gmail.com>"]
homepage = "https://github.com/stpettersens/db-tools"
license = "MIT"

[dependencies]
clioptions = "0.1.0"
regex = "0.1.77"
